# Hackathone-02-Todo_App

Phase-01/: pyproject.toml
Phase-01/Advance-Features/: CLAUDE.md  CONSTITUTION.md  README.md
Phase-01/Advance-Features/history/prompts/2-advanced-features/: 001-advanced-features-recurring-tasks-dates-plan.md  002-advanced-features-recurring-tasks-dates-tasks.md
Phase-01/Advance-Features/history/prompts/intermediate-features/: 2025-12-29-intermediate-features-plan.md  2025-12-29-intermediate-todo-features.md
Phase-01/Advance-Features/specs/: PHASE-I-TASKS.md
Phase-01/Advance-Features/specs/1-intermediate-features/: data-model.md  plan.md  quickstart.md  spec.md
Phase-01/Advance-Features/specs/1-intermediate-features/contracts/: add-task.md  filter-tasks.md
Phase-01/Advance-Features/specs/2-advanced-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Phase-01/Advance-Features/specs/2-advanced-features/contracts/: add-recurring-task.md  smart-views.md  (+2 more)
Phase-01/Advance-Features/src/todo/: __main__.py  cli.py  main.py  models.py  services.py
Phase-01/Basic Features/: CLAUDE.md  README.md
Phase-01/Basic Features/specs/: PHASE-I-PLAN.md
Phase-01/Basic Features/src/todo/: __init__.py  __main__.py  cli.py  models.py
Phase-01/Intermediate Features/: README.md  test_todo.py
Phase-01/Intermediate Features/specs/: PHASE-I-SPEC.md
Phase-01/Intermediate Features/specs/1-intermediate-features/: research.md
Phase-01/Intermediate Features/src/todo/: cli.py  models.py  services.py
Phase-01/src/todo/: services.py  storage.py
(+3 files in other folders)
