[project]
name = "todo"
version = "1.0.0"
description = "Todo Application - Phase I: In-Memory Python Console App"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
todo = "todo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todo"]
